Fixes #8 - Create TGZ